core/grammar/base.parser-untyped.ts
// @ts-nocheck
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { File: peg$parseFile, Type: peg$parseType, TypeFile: peg$parseTypeFile };
  var peg$startRuleFunction = peg$parseFile;

  var peg$c0 = ";";
  var peg$c1 = ":";
  var peg$c2 = "#[";
  var peg$c3 = "]";
  var peg$c4 = "#[r";
  var peg$c5 = "#[h";
  var peg$c6 = "#[:";
  var peg$c7 = "builtin";
  var peg$c8 = "b";
  var peg$c9 = ":unresolved:";
  var peg$c10 = "(";
  var peg$c11 = ")";
  var peg$c12 = ",";
  var peg$c13 = "\n";
  var peg$c14 = "-";
  var peg$c15 = "!";
  var peg$c16 = "//";
  var peg$c17 = "/*";
  var peg$c18 = "*/";
  var peg$c19 = "true";
  var peg$c20 = "false";
  var peg$c21 = ".";
  var peg$c22 = "u";
  var peg$c23 = "\"";
  var peg$c24 = "${";
  var peg$c25 = "}";
  var peg$c26 = "\\";
  var peg$c27 = "@";
  var peg$c28 = "`";
  var peg$c29 = "[";
  var peg$c30 = "|";
  var peg$c31 = "*";
  var peg$c32 = "<";
  var peg$c33 = ">";
  var peg$c34 = "{";
  var peg$c35 = "...";
  var peg$c36 = "=";
  var peg$c37 = "+";
  var peg$c38 = "=>";
  var peg$c39 = "type";
  var peg$c40 = "and";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[0-9a-zA-Z]/;
  var peg$r2 = /^[0-9a-z\-A-Z_]/;
  var peg$r3 = /^[+*\^\/<>=|&\-]/;
  var peg$r4 = /^[ \t\r]/;
  var peg$r5 = /^[ \t\n\r]/;
  var peg$r6 = /^[0-9a-zA-Z_]/;
  var peg$r7 = /^[^"\\]/;

  var peg$e0 = peg$literalExpectation(";", false);
  var peg$e1 = peg$literalExpectation(":", false);
  var peg$e2 = peg$literalExpectation("#[", false);
  var peg$e3 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e4 = peg$literalExpectation("]", false);
  var peg$e5 = peg$literalExpectation("#[r", false);
  var peg$e6 = peg$literalExpectation("#[h", false);
  var peg$e7 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"]], false, false);
  var peg$e8 = peg$literalExpectation("#[:", false);
  var peg$e9 = peg$literalExpectation("builtin", false);
  var peg$e10 = peg$literalExpectation("b", false);
  var peg$e11 = peg$literalExpectation(":unresolved:", false);
  var peg$e12 = peg$literalExpectation("(", false);
  var peg$e13 = peg$literalExpectation(")", false);
  var peg$e14 = peg$literalExpectation(",", false);
  var peg$e15 = peg$literalExpectation("\n", false);
  var peg$e16 = peg$anyExpectation();
  var peg$e17 = peg$classExpectation([["0", "9"], ["a", "z"], "-", ["A", "Z"], "_"], false, false);
  var peg$e18 = peg$literalExpectation("-", false);
  var peg$e19 = peg$literalExpectation("!", false);
  var peg$e20 = peg$literalExpectation("//", false);
  var peg$e21 = peg$classExpectation(["+", "*", "^", "/", "<", ">", "=", "|", "&", "-"], false, false);
  var peg$e22 = peg$classExpectation([" ", "\t", "\r"], false, false);
  var peg$e23 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e24 = peg$literalExpectation("/*", false);
  var peg$e25 = peg$literalExpectation("*/", false);
  var peg$e26 = peg$literalExpectation("true", false);
  var peg$e27 = peg$literalExpectation("false", false);
  var peg$e28 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e29 = peg$literalExpectation(".", false);
  var peg$e30 = peg$literalExpectation("u", false);
  var peg$e31 = peg$literalExpectation("\"", false);
  var peg$e32 = peg$literalExpectation("${", false);
  var peg$e33 = peg$literalExpectation("}", false);
  var peg$e34 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e35 = peg$literalExpectation("\\", false);
  var peg$e36 = peg$literalExpectation("@", false);
  var peg$e37 = peg$literalExpectation("`", false);
  var peg$e38 = peg$literalExpectation("[", false);
  var peg$e39 = peg$literalExpectation("|", false);
  var peg$e40 = peg$literalExpectation("*", false);
  var peg$e41 = peg$literalExpectation("<", false);
  var peg$e42 = peg$literalExpectation(">", false);
  var peg$e43 = peg$literalExpectation("{", false);
  var peg$e44 = peg$literalExpectation("...", false);
  var peg$e45 = peg$literalExpectation("=", false);
  var peg$e46 = peg$literalExpectation("+", false);
  var peg$e47 = peg$literalExpectation("=>", false);
  var peg$e48 = peg$literalExpectation("type", false);
  var peg$e49 = peg$literalExpectation("and", false);

  var peg$f0 = function(toplevels) {
  return {
    type: "File",
    loc: myLocation(),
    comments: allComments,
    toplevels: toplevels.map(element => element[1])
  };
};
  var peg$f1 = function(toplevels) {
  return {
    type: "TypeFile",
    loc: myLocation(),
    comments: allComments,
    toplevels: toplevels.map(element => element[1])
  };
};
  var peg$f2 = function() {
  return {
    type: "NamespacedIdText",
    loc: myLocation()
  };
};
  var peg$f3 = function() {
  return {
    type: "JustSym",
    loc: myLocation()
  };
};
  var peg$f4 = function() {
  return {
    type: "RecurHash",
    loc: myLocation()
  };
};
  var peg$f5 = function() {
  return {
    type: "HashRef",
    loc: myLocation()
  };
};
  var peg$f6 = function() {
  return {
    type: "ShortRef",
    loc: myLocation()
  };
};
  var peg$f7 = function() {
  return {
    type: "BuiltinHash",
    loc: myLocation()
  };
};
  var peg$f8 = function() {
  return {
    type: "UnresolvedHash",
    loc: myLocation()
  };
};
  var peg$f9 = function(target, suffixes_drop) {
  return suffixes_drop.length === 0 ? target : {
    type: "Apply",
    loc: myLocation(),
    target,
    suffixes: suffixes_drop
  };
};
  var peg$f10 = function(args) {
  return {
    type: "CallSuffix",
    loc: myLocation(),
    args
  };
};
  var peg$f11 = function(first, rest) {
  return {
    type: "CommaExpr",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f12 = function(text, hash) {
  return {
    type: "Identifier",
    loc: myLocation(),
    text,
    hash
  };
};
  var peg$f13 = function(items) {
  return {
    type: "ParenedExpression",
    loc: myLocation(),
    items
  };
};
  var peg$f14 = function() {
  return {
    type: "IdText",
    loc: myLocation()
  };
};
  var peg$f15 = function(first, rest_drop) {
  return rest_drop.length === 0 ? first : {
    type: "BinOp",
    loc: myLocation(),
    first,
    rest: rest_drop
  };
};
  var peg$f16 = function(op, right) {
  return {
    type: "BinOpRight",
    loc: myLocation(),
    op,
    right
  };
};
  var peg$f17 = function(op_drop, inner) {
  return !op_drop ? inner : {
    type: "WithUnary",
    loc: myLocation(),
    op: op_drop,
    inner
  };
};
  var peg$f18 = function(op, hash) {
  return {
    type: "UnaryOpWithHash",
    loc: myLocation(),
    op,
    hash
  };
};
  var peg$f19 = function(op, hash) {
  return {
    type: "binopWithHash",
    loc: myLocation(),
    op,
    hash
  };
};
  var peg$f20 = function(inner) {
  return {
    type: "ParenedOp",
    loc: myLocation(),
    inner
  };
};
  var peg$f21 = function() { allComments.push([location(), text()]); };
  var peg$f22 = function() { allComments.push([location(), text()]); };
  var peg$f23 = function() { allComments.push([location(), text()]); };
  var peg$f24 = function(v) {
  return {
    type: "Boolean",
    loc: myLocation(),
    v
  };
};
  var peg$f25 = function(contents) {
  return {
    type: "Number",
    loc: myLocation(),
    contents
  };
};
  var peg$f26 = function(text) {
  return {
    type: "String",
    loc: myLocation(),
    text
  };
};
  var peg$f27 = function(first, rest) {
  return {
    type: "TemplateString",
    loc: myLocation(),
    first,
    rest
  };
};
  var peg$f28 = function(wrap, suffix) {
  return {
    type: "TemplatePair",
    loc: myLocation(),
    wrap,
    suffix
  };
};
  var peg$f29 = function(expr) {
  return {
    type: "TemplateWrap",
    loc: myLocation(),
    expr
  };
};
  var peg$f30 = function() {
  return {
    type: "escapedChar",
    loc: myLocation()
  };
};
  var peg$f31 = function(decorators_drop, inner) {
  return decorators_drop.length === 0 ? inner : {
    type: "DecoratedExpression",
    loc: myLocation(),
    decorators: decorators_drop.map(element => element[0]),
    inner
  };
};
  var peg$f32 = function(id, args) {
  return {
    type: "Decorator",
    loc: myLocation(),
    id,
    args
  };
};
  var peg$f33 = function(text, hash) {
  return {
    type: "DecoratorId",
    loc: myLocation(),
    text,
    hash
  };
};
  var peg$f34 = function(first, rest) {
  return {
    type: "DecoratorArgs",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f35 = function(label, arg) {
  return {
    type: "LabeledDecoratorArg",
    loc: myLocation(),
    label: label ? label[0] : label,
    arg
  };
};
  var peg$f36 = function(type_) {
  return {
    type: "DecType",
    loc: myLocation(),
    type_
  };
};
  var peg$f37 = function(expr) {
  return {
    type: "DecExpr",
    loc: myLocation(),
    expr
  };
};
  var peg$f38 = function(text, payload) {
  return {
    type: "Enum",
    loc: myLocation(),
    text,
    payload: payload ? payload[2] : payload
  };
};
  var peg$f39 = function(cases) {
  return {
    type: "TEnum",
    loc: myLocation(),
    cases
  };
};
  var peg$f40 = function(first, rest) {
  return {
    type: "EnumCases",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f41 = function(decorators, text, payload) {
  return {
    type: "TagDecl",
    loc: myLocation(),
    decorators: decorators.map(element => element[0]),
    text,
    payload
  };
};
  var peg$f42 = function(first, rest) {
  return {
    type: "TagPayload",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f43 = function(pseudo) {
  return {
    type: "Star",
    loc: myLocation(),
    pseudo
  };
};
  var peg$f44 = function(vbls) {
  return {
    type: "TypeApplicationSuffix",
    loc: myLocation(),
    vbls
  };
};
  var peg$f45 = function(first, rest) {
  return {
    type: "TypeAppVbls",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f46 = function(vbls, body) {
  return {
    type: "TypeVariables",
    loc: myLocation(),
    vbls,
    body
  };
};
  var peg$f47 = function(first, rest) {
  return {
    type: "TypeVbls",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f48 = function(vbl, bound) {
  return {
    type: "TypeVbl",
    loc: myLocation(),
    vbl,
    bound: bound ? bound[3] : bound
  };
};
  var peg$f49 = function(items) {
  return {
    type: "Record",
    loc: myLocation(),
    items
  };
};
  var peg$f50 = function(first, rest) {
  return {
    type: "RecordItems",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f51 = function(inner) {
  return {
    type: "RecordSpread",
    loc: myLocation(),
    inner
  };
};
  var peg$f52 = function(key, value) {
  return {
    type: "RecordKeyValue",
    loc: myLocation(),
    key,
    value
  };
};
  var peg$f53 = function(items) {
  return {
    type: "TRecord",
    loc: myLocation(),
    items
  };
};
  var peg$f54 = function(first, rest) {
  return {
    type: "TRecordItems",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f55 = function(inner) {
  return {
    type: "TRecordSpread",
    loc: myLocation(),
    inner
  };
};
  var peg$f56 = function(key, value, default_) {
  return {
    type: "TRecordKeyValue",
    loc: myLocation(),
    key,
    value,
    default_: default_ ? default_[3] : default_
  };
};
  var peg$f57 = function(inner, args_drop) {
  return args_drop.length === 0 ? inner : {
    type: "TApply",
    loc: myLocation(),
    inner,
    args: args_drop.map(element => element[3])
  };
};
  var peg$f58 = function(first, rest) {
  return {
    type: "TComma",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f59 = function(args, inner) {
  return {
    type: "TVars",
    loc: myLocation(),
    args,
    inner
  };
};
  var peg$f60 = function(first, rest) {
  return {
    type: "TBargs",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f61 = function(label, hash, bound, default_) {
  return {
    type: "TBArg",
    loc: myLocation(),
    label,
    hash,
    bound: bound ? bound[3] : bound,
    default_: default_ ? default_[3] : default_
  };
};
  var peg$f62 = function(decorators, inner) {
  return {
    type: "TDecorated",
    loc: myLocation(),
    decorators: decorators.map(element => element[0]),
    inner
  };
};
  var peg$f63 = function(text, hash) {
  return {
    type: "TRef",
    loc: myLocation(),
    text,
    hash
  };
};
  var peg$f64 = function(left, right_drop) {
  return right_drop.length === 0 ? left : {
    type: "TOps",
    loc: myLocation(),
    left,
    right: right_drop
  };
};
  var peg$f65 = function(top, right) {
  return {
    type: "TRight",
    loc: myLocation(),
    top,
    right
  };
};
  var peg$f66 = function(items) {
  return {
    type: "TParens",
    loc: myLocation(),
    items
  };
};
  var peg$f67 = function(label, typ) {
  return {
    type: "TArg",
    loc: myLocation(),
    label: label ? label[0] : label,
    typ
  };
};
  var peg$f68 = function(first, rest) {
  return {
    type: "TArgs",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f69 = function(args, result) {
  return {
    type: "TLambda",
    loc: myLocation(),
    args,
    result
  };
};
  var peg$f70 = function(first, rest) {
  return {
    type: "TypeAlias",
    loc: myLocation(),
    items: [first, ...rest.map(element => element[3])]
  };
};
  var peg$f71 = function(name, typ) {
  return {
    type: "TypePair",
    loc: myLocation(),
    name,
    typ
  };
};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseFile() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parseToplevel();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_nonnewline();
      if (input.charCodeAt(peg$currPos) === 59) {
        s6 = peg$c0;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_lineEnd();
      if (s7 !== peg$FAILED) {
        s3 = [s3, s4, s5, s6, s7];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      s4 = peg$parseToplevel();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_nonnewline();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c0;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s7 = peg$parse_lineEnd();
        if (s7 !== peg$FAILED) {
          s3 = [s3, s4, s5, s6, s7];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = peg$parse_();
    s3 = peg$parsefinalLineComment();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f0(s1);

    return s0;
  }

  function peg$parseTypeFile() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parseTypeToplevel();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_nonnewline();
      if (input.charCodeAt(peg$currPos) === 59) {
        s6 = peg$c0;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_lineEnd();
      if (s7 !== peg$FAILED) {
        s3 = [s3, s4, s5, s6, s7];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      s4 = peg$parseTypeToplevel();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_nonnewline();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c0;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s7 = peg$parse_lineEnd();
        if (s7 !== peg$FAILED) {
          s3 = [s3, s4, s5, s6, s7];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = peg$parse_();
    s3 = peg$parsefinalLineComment();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f1(s1);

    return s0;
  }

  function peg$parseNamespacedIdText() {
    var s0, s1, s2, s3, s4, s5;
